[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/player_ship.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://bullet/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://explosion/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/flight_sound.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/synthetic_laser.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/synthetic_thunder_short.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 32.6501

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.00561798, 0.0393258, 0.207865 )
colors = PoolColorArray( 0.476563, 0.894188, 1, 1, 0.784668, 0.517237, 0, 1, 0.413574, 0.08845, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 2032

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0988636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 1, 5, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="Player" type="RigidBody2D"]
contacts_reported = 1
contact_monitor = true
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource( 2 )
Bullet = ExtResource( 3 )
fire_rate = 0.25
max_shield = 200
shield_regen = 0.5
engine_power = 500
spin_power = 15000

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 50, 0 )

[node name="GunTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Explosion" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Sprite" parent="Explosion" index="0"]
frame = 1

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="EngineSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Exhaust" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( -28, 0 )
rotation = 3.14159
emitting = false
amount = 25
process_material = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]

[editable path="Explosion"]
